# tap-tradera

./: README.md  categories.ipynb  meltano.yml  pyproject.toml  schema_generation.ipynb  tox.ini  tradera_items_schema_generation.ipynb  tradera_search_items_schema_generation.ipynb
.github/workflows/: ci_workflow.yml
tap_tradera/: client.py  streams.py  tap.py
tap_tradera/schemas/: category.json  item.json  search_item.json
tap_tradera/tests/: __init__.py  notest_core.py  test_client.py
