[tool.poetry]
name = "tap-tradera"
version = "0.0.1"
description = "`tap-tradera` is a Singer tap for tradera, built with the Meltano Singer SDK."
authors = ["Ken Payne"]
keywords = [
    "ELT",
    "tradera",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.8"
requests = "^2.25.1"
singer-sdk = { version="^0.14.0"}
fs-s3fs = { version = "^1.1.1", optional = true}
zeep = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"
genson = "^1.2.2"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_tradera"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-tradera = 'tap_tradera.tap:TapTradera.cli'
